Minor tweaks: fixed tab hover animation changed colours to fit better with light mode (and honestly looks better in dark mode too) and added the resources tab. Tomorrow will be a well-earned back end day I think :)

--- a/app/classes/styles.css
+++ b/app/classes/styles.css
@@ -23,8 +23,9 @@
         display: flex;
         flex-direction: column;
 
-        border: 1px solid var(--border);
-        background-color: var(--bg-light);
+        border-top: 1px solid var(--highlight);
+        box-shadow: var(--soft-shadow);
+        background-color: var(--bg);
         border-radius: 10px;
 
         margin: 1.5rem;
@@ -36,6 +37,7 @@
 /* Style the buttons that are used to open the tab content */
 .tab button {
         background-color: inherit;
+        color: var(--text-muted);
         float: left;
         border: none;
         outline: none;
@@ -46,12 +48,16 @@
 
 /* Change background color of buttons on hover */
 .tab button:hover {
-        background-color: var(--border);
+        scale: 1;
+        background-color: var(--bg-light);
+        transform: translateY(-4px);
+        transition: var(--transition);
 }
 
 /* Create an active/current tablink class */
 .tab button.active {
-        background-color: var(--border-muted);
+        background-color: var(--bg-light);
+        color: var(--secondary);
 }
 
 /* Style the tab content */
